--- a/app/src/main/res/layout/layout_art.xml
+++ b/app/src/main/res/layout/layout_art.xml
@@ -15,21 +15,33 @@
    limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/testview"
-    android:layout_width="120dp"
-    android:layout_height="150dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/rounded_bg"
     android:orientation="vertical"
-    android:padding="4dp"
+    android:padding="2dp"
     android:clipChildren="false"
-    android:clipToPadding="false" >
+    android:clipToPadding="false">
 
-    <ImageView
-        android:id="@+id/art"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/monalisa_vertical"
-        />
+        app:cardCornerRadius="4dp"
+        app:cardElevation="0dp"
+        >
+
+
+
+        <ImageView
+            android:id="@+id/art"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/monalisa_vertical"
+            />
+    </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
