--- a/app/src/main/res/layout/activity_scene_form.xml
+++ b/app/src/main/res/layout/activity_scene_form.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SceneForm">
+    tools:context=".activity.SceneFormActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/arFragment"
