--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
         >
 
         <Button
@@ -29,6 +29,7 @@
             android:layout_weight="1"
             android:text="Filament"
             android:onClick="onItemClick"
+            android:visibility="gone"
             android:layout_margin="2dp"
             />
 
@@ -38,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="ARCore"
+            android:text="Gallery"
             android:onClick="onItemClick"
             android:layout_margin="2dp"
             />
