--- a/app/src/main/res/layout/item_gallery.xml
+++ b/app/src/main/res/layout/item_gallery.xml
@@ -25,11 +25,22 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
                 app:loadImage="@{model.imageUrl}" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/augmentedReality"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:src="@drawable/ar"
+                android:background="?selectableItemBackground"
+                android:layout_margin="10dp"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/white"/>
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
