--- a/app/src/main/res/layout/layout_art.xml
+++ b/app/src/main/res/layout/layout_art.xml
@@ -2,12 +2,13 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/testview"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/art_frame"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_bg"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:padding="2dp"
+    android:padding="6dp"
     android:clipChildren="false"
     android:clipToPadding="false">
 
@@ -19,13 +20,12 @@
         >
 
 
-
         <ImageView
             android:id="@+id/art"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
-            android:src="@drawable/monalisa_vertical"
+            tools:src="@drawable/monalisa_vertical"
             />
     </androidx.cardview.widget.CardView>
 
