--- a/app/src/main/res/layout/activity_scene_form.xml
+++ b/app/src/main/res/layout/activity_scene_form.xml
@@ -11,15 +11,11 @@
         tools:context=".activity.SceneFormActivity">
 
 
-        <fragment
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/arFragment"
-            android:name="com.shankar.tgp_arcore.util.CustomArFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="@color/black"
+            android:layout_height="match_parent" />
 
 
         <ImageView
